Moni-97 new post revamp (#2)
* checkpoint

* feat: post roi & pnl, moniest roi & pnl implementation completed

* chore: change live command name

* fix: fix live command

* fix: live command fixed back

* fix: targets and pnl&roi calculations fixed

* feat: docs updated

* feat: get moniest as content return type fix

* fix: docs fixed

---------
