# docs/swagger.json
@@ -704,7 +704,71 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.GetContentMoniestResponse"
+                                "$ref": "#/definitions/model.UserAsContent"
+                            }
+                        }
+                    },
+                    "406": {
+                        "description": "invalid body",
+                        "schema": {
+                            "$ref": "#/definitions/clientError.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "server error",
+                        "schema": {
+                            "$ref": "#/definitions/clientError.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/content/moniests/search": {
+            "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Search Moniest by their fullname \u0026 username",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Content"
+                ],
+                "summary": "Search Moniest",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "length min:1 max:30",
+                        "name": "searchText",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "default: 10 \u0026 max: 50",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "default: 0",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.User"
                             }
                         }
                     },
@@ -756,7 +820,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "options: [score | created_at] default: score, only affect when subscription \u0026 active = false",
+                        "description": "options: [pnl | created_at] default: pnl, only affect when subscription \u0026 active = false",
                         "name": "sortBy",
                         "in": "query"
                     },
@@ -821,6 +885,13 @@
                         "type": "string",
                         "description": "name",
                         "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "market_type",
+                        "name": "market_type",
                         "in": "query",
                         "required": true
                     }
@@ -1035,7 +1106,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": " +\"score\" field if fetching own posts",
+                        "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
@@ -1481,63 +1552,6 @@
                 }
             }
         },
-        "/moniests/posts/approximateScore": {
-            "post": {
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ],
-                "description": "Calculate Approximate Score for Post",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Post"
-                ],
-                "summary": "Calculate Approximate Score for Post",
-                "parameters": [
-                    {
-                        "description": "`description` is optional",
-                        "name": "CalculateApproxScoreBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.CreatePostRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.CalculateApproxScoreResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "user is not moniest",
-                        "schema": {
-                            "$ref": "#/definitions/clientError.ErrorResponse"
-                        }
-                    },
-                    "406": {
-                        "description": "invalid body",
-                        "schema": {
-                            "$ref": "#/definitions/clientError.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "server error",
-                        "schema": {
-                            "$ref": "#/definitions/clientError.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/moniests/profile": {
             "patch": {
                 "security": [
@@ -1902,6 +1916,17 @@
                 "EntryPositionShort"
             ]
         },
+        "db.PostCryptoMarketType": {
+            "type": "string",
+            "enum": [
+                "spot",
+                "futures"
+            ],
+            "x-enum-varnames": [
+                "PostCryptoMarketTypeSpot",
+                "PostCryptoMarketTypeFutures"
+            ]
+        },
         "db.PostCryptoStatus": {
             "type": "string",
             "enum": [
@@ -1925,14 +1950,6 @@
                 "UserLanguageEn",
                 "UserLanguageTr"
             ]
-        },
-        "model.CalculateApproxScoreResponse": {
-            "type": "object",
-            "properties": {
-                "score": {
-                    "type": "number"
-                }
-            }
         },
         "model.ChangePasswordRequest": {
             "type": "object",
@@ -2024,10 +2041,9 @@
                 "currency",
                 "direction",
                 "duration",
+                "market_type",
                 "stop",
-                "target1",
-                "target2",
-                "target3"
+                "take_profit"
             ],
             "properties": {
                 "currency": {
@@ -2042,7 +2058,16 @@
                 "duration": {
                     "type": "string"
                 },
+                "leverage": {
+                    "type": "integer"
+                },
+                "market_type": {
+                    "type": "string"
+                },
                 "stop": {
+                    "type": "number"
+                },
+                "take_profit": {
                     "type": "number"
                 },
                 "target1": {
@@ -2077,16 +2102,28 @@
                 "id": {
                     "type": "string"
                 },
+                "leverage": {
+                    "type": "integer"
+                },
+                "market_type": {
+                    "$ref": "#/definitions/db.PostCryptoMarketType"
+                },
                 "moniest_id": {
                     "type": "string"
                 },
-                "score": {
+                "pnl": {
+                    "type": "number"
+                },
+                "roi": {
                     "type": "number"
                 },
                 "start_price": {
                     "type": "number"
                 },
                 "stop": {
+                    "type": "number"
+                },
+                "take_profit": {
                     "type": "number"
                 },
                 "target1": {
@@ -2100,6 +2137,38 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "model.CryptoPostStatistics": {
+            "type": "object",
+            "properties": {
+                "pnl_30days": {
+                    "type": "number"
+                },
+                "pnl_7days": {
+                    "type": "number"
+                },
+                "pnl_total": {
+                    "type": "number"
+                },
+                "roi_30days": {
+                    "type": "number"
+                },
+                "roi_7days": {
+                    "type": "number"
+                },
+                "roi_total": {
+                    "type": "number"
+                },
+                "win_rate_30days": {
+                    "type": "number"
+                },
+                "win_rate_7days": {
+                    "type": "number"
+                },
+                "win_rate_total": {
+                    "type": "number"
                 }
             }
         },
@@ -2128,47 +2197,6 @@
                 }
             }
         },
-        "model.GetContentMoniestResponse": {
-            "type": "object",
-            "properties": {
-                "background_photo_link": {
-                    "type": "string"
-                },
-                "background_photo_thumbnail_link": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "email_verified": {
-                    "type": "boolean"
-                },
-                "fullname": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "location": {
-                    "type": "string"
-                },
-                "moniest": {
-                    "$ref": "#/definitions/model.contentMoniest"
-                },
-                "profile_photo_link": {
-                    "type": "string"
-                },
-                "profile_photo_thumbnail_link": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
         "model.GetContentPostResponse": {
             "type": "object",
             "properties": {
@@ -2193,6 +2221,18 @@
                 "id": {
                     "type": "string"
                 },
+                "leverage": {
+                    "type": "integer"
+                },
+                "market_type": {
+                    "$ref": "#/definitions/db.PostCryptoMarketType"
+                },
+                "pnl": {
+                    "type": "number"
+                },
+                "roi": {
+                    "type": "number"
+                },
                 "start_price": {
                     "type": "number"
                 },
@@ -2200,6 +2240,9 @@
                     "$ref": "#/definitions/db.PostCryptoStatus"
                 },
                 "stop": {
+                    "type": "number"
+                },
+                "take_profit": {
                     "type": "number"
                 },
                 "target1": {
@@ -2276,7 +2319,7 @@
                 "email_regex": {
                     "type": "string"
                 },
-                "long_max_target_multiplier": {
+                "long_max_take_profit_multiplier": {
                     "type": "integer"
                 },
                 "max_bio_lenght": {
@@ -2348,11 +2391,28 @@
                 "description": {
                     "type": "string"
                 },
-                "id": {
+                "post_statistics": {
+                    "$ref": "#/definitions/model.CryptoPostStatistics"
+                },
+                "subscription_info": {
+                    "$ref": "#/definitions/model.MoniestSubscriptionInfo"
+                }
+            }
+        },
+        "model.MoniestAsContent": {
+            "type": "object",
+            "properties": {
+                "bio": {
                     "type": "string"
                 },
-                "score": {
-                    "type": "number"
+                "description": {
+                    "type": "string"
+                },
+                "post_statistics": {
+                    "$ref": "#/definitions/model.CryptoPostStatistics"
+                },
+                "subscriber_count": {
+                    "type": "integer"
                 },
                 "subscription_info": {
                     "$ref": "#/definitions/model.MoniestSubscriptionInfo"
@@ -2657,6 +2717,47 @@
                 }
             }
         },
+        "model.UserAsContent": {
+            "type": "object",
+            "properties": {
+                "background_photo_link": {
+                    "type": "string"
+                },
+                "background_photo_thumbnail_link": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "email_verified": {
+                    "type": "boolean"
+                },
+                "fullname": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "moniest": {
+                    "$ref": "#/definitions/model.MoniestAsContent"
+                },
+                "profile_photo_link": {
+                    "type": "string"
+                },
+                "profile_photo_thumbnail_link": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "model.VerifyEmailRequest": {
             "type": "object",
             "required": [
@@ -2699,29 +2800,6 @@
             "properties": {
                 "token": {
                     "type": "string"
-                }
-            }
-        },
-        "model.contentMoniest": {
-            "type": "object",
-            "properties": {
-                "bio": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "score": {
-                    "type": "number"
-                },
-                "subscriber_count": {
-                    "type": "integer"
-                },
-                "subscription_info": {
-                    "$ref": "#/definitions/model.MoniestSubscriptionInfo"
                 }
             }
         }
